# qrdecoder

./: .gitignore  CMakeLists.txt
src/: decodermgr.cpp  decodermgr.hpp  wechat_qrcode.cpp
src/zxing/common/binarizer/: adaptive_threshold_mean_binarizer.cpp  adaptive_threshold_mean_binarizer.hpp
